# learning-python

./: .gitignore  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: documentation_issue.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md
_versions/3_12/: .envrc
_versions/3_9/: pyproject.toml
decimal/: README.md  decimal_features.py  precision_detail.py  precision_simple.py
http/: simple_server.py
itertools/: README.md  iteratable_operators.py  mixed_iterators.py  scrabble.py
math/: README.md  floating_point.py  numbers.py  pyproject.toml
networking_libraries/: README.md
networking_libraries/ariadne/: pyproject.toml
networking_libraries/ariadne/graphql_queries/: query.py
networking_libraries/ariadne/graphql_queries/github/: node.py  security.py
networking_libraries/ariadne/tests_unit/graphql_queries/github/: test_security.py
networking_libraries/strawberry-graphql/: README.md  pyproject.toml
networking_libraries/strawberry-graphql/graphql_queries/github/: node.py  security.py
networking_libraries/strawberry-graphql/tests_unit/graphql_queries/github/: test_node.py  test_security.py
python_standard_library/: .coveragerc  .envrc  .pdbrc  README.md  pyproject.toml
python_standard_library/itertools/: combinatorics.py  iteratable_operators.py
python_standard_library/os/: pyproject.toml
python_standard_library/python_standard_library/itertools/: README.md
python_standard_library/python_standard_library/math/: statistics.py
python_standard_library/tests_unit/python_standard_library/decimal/: test_decimal_features.py  test_precision_detail.py  test_precision_simple.py
python_standard_library/tests_unit/python_standard_library/math/: test_floating_point.py  test_numbers.py  test_statistics.py
python_standard_library/time/: poetry.toml
random/: pyproject.toml
